sfdx-source/force-app/main/default/objects/Merchant_Service__c/Merchant_Service__c.object-meta.xml
<CustomObject>
    <label>Service</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Services</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>