sfdx-source/force-app/main/default/objects/Merchant_Service__c/fields/Active_Rates_Applied__c.field-meta.xml
<CustomField>
    <fullName>Active_Rates_Applied__c</fullName>
    <defaultValue>false</defaultValue>
    <description>LEM-6471</description>
    <label>Active Rates Applied?</label>
    <type>Checkbox</type>
</CustomField>