sfdx-source/force-app/main/default/objects/Merchant_Service__c/fields/Ads_Promos_Service__c.field-meta.xml
<CustomField>
    <fullName>Ads_Promos_Service__c</fullName>
    <description>LEM-18171 This field is used on the Services Related List on Store Account</description>
    <formula>IF(
  OR(
    TEXT(Order_Product__r.Product2.Family) == &quot;Marketplace Promotion&quot;,
    TEXT(Order_Product__r.Product2.Family) == &quot;Advertisement&quot;
  ),
  true,
  false
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Sets to true if the Services is related to Ads and Promos</inlineHelpText>
    <label>Ads&amp;Promos Service?</label>
    <type>Checkbox</type>
</CustomField>