sfdx-source/force-app/main/default/objects/Merchant_Service__c/fields/Bundle__c.field-meta.xml
<CustomField>
    <fullName>Bundle__c</fullName>
    <description>LEM-187: The name of the OrderProduct.BundleRoot product name of the Order Product related to this MX Service.</description>
    <inlineHelpText>The bundle that this service product was quoted under</inlineHelpText>
    <label>Bundle</label>
    <length>255</length>
    <type>Text</type>
</CustomField>