sfdx-source/force-app/main/default/objects/Merchant_Service__c/fields/Business_Account_Id__c.field-meta.xml
<CustomField>
    <fullName>Business_Account_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>LEM-1027: It stores the Business account id of the store account.</description>
    <label>Business_Account_Id</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Merchant Services (Business_Account_Id)</relationshipLabel>
    <relationshipName>Merchant_Services1</relationshipName>
    <type>Lookup</type>
</CustomField>