sfdx-source/force-app/main/default/objects/Merchant_Service__c/fields/Discount_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Discount_Schedule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>LEM-5129: Add Discount Schedule to the Service Record</description>
    <inlineHelpText>Lookup to Discount Schedule record where pricing tiers are captured</inlineHelpText>
    <label>Discount Schedule</label>
    <referenceTo>SBQQ__DiscountSchedule__c</referenceTo>
    <relationshipLabel>Services</relationshipLabel>
    <relationshipName>Services</relationshipName>
    <type>Lookup</type>
</CustomField>