sfdx-source/force-app/main/default/objects/Merchant_Service__c/fields/Final_Commission__c.field-meta.xml
<CustomField>
    <fullName>Final_Commission__c</fullName>
    <formula>Order_Product__r.Final_Commission__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Final Commission (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>