sfdx-source/force-app/main/default/objects/Merchant_Service__c/fields/Final_Fee__c.field-meta.xml
<CustomField>
    <fullName>Final_Fee__c</fullName>
    <description>LEM-1815: Updates to the Page Layouts</description>
    <formula>Order_Product__r.Final_Fee__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Final Fee ($)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>