sfdx-source/force-app/main/default/objects/Merchant_Service__c/fields/Group__c.field-meta.xml
<CustomField>
    <fullName>Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>LEM-6463: Corporate Cherry-Picking</description>
    <label>Group</label>
    <referenceTo>SBQQ__QuoteLineGroup__c</referenceTo>
    <relationshipLabel>Services</relationshipLabel>
    <relationshipName>Group_Services</relationshipName>
    <type>Lookup</type>
</CustomField>