sfdx-source/force-app/main/default/objects/Merchant_Service__c/fields/Mx_Agreed_to_Product__c.field-meta.xml
<CustomField>
    <fullName>Mx_Agreed_to_Product__c</fullName>
    <description>LEM-2589 Used to indicate whether the product must be provisioned for the Mx. A value of Yes indicates a Mx is entitled to a product and signed a contract agreeing to its terms and conditions. A value of No indicates a Mx is entitled to a service but has not chosen to take advantage of this product.</description>
    <label>Mx Agreed to Product</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>