sfdx-source/force-app/main/default/objects/Merchant_Service__c/fields/Order_Product__c.field-meta.xml
<CustomField>
    <fullName>Order_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order Product</label>
    <referenceTo>OrderItem</referenceTo>
    <relationshipLabel>Merchant Services</relationshipLabel>
    <relationshipName>Merchant_Services</relationshipName>
    <type>Lookup</type>
</CustomField>