sfdx-source/force-app/main/default/objects/Merchant_Service__c/fields/Pricing_Tier__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Tier__c</fullName>
    <description>LEM-5129: Add Tier-Based Pricing to the Service Record</description>
    <formula>Order_Product__r.Order.Pricing_Tier__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pricing Tier</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>