sfdx-source/force-app/main/default/objects/Merchant_Service__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>LEM-187: Initial Setup of Merchant Service</description>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Merchant Services</relationshipLabel>
    <relationshipName>Merchant_Services</relationshipName>
    <type>Lookup</type>
</CustomField>