sfdx-source/force-app/main/default/objects/Merchant_Service__c/fields/Product_Code__c.field-meta.xml
<CustomField>
    <fullName>Product_Code__c</fullName>
    <description>LEM-3513 adding product code to merchant service</description>
    <label>Product Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>