sfdx-source/force-app/main/default/objects/Merchant_Service__c/fields/Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Name__c</fullName>
    <description>LEM-187: Initial Setup of Merchant Service</description>
    <label>Product Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>