sfdx-source/force-app/main/default/objects/Merchant_Service__c/fields/Rate_Card__c.field-meta.xml
<CustomField>
    <fullName>Rate_Card__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>LEM-8768 Pull the Rate Card for a given State.</description>
    <label>Rate Card</label>
    <referenceTo>Rate_Card__c</referenceTo>
    <relationshipLabel>Services</relationshipLabel>
    <relationshipName>Services</relationshipName>
    <type>Lookup</type>
</CustomField>