sfdx-source/force-app/main/default/objects/Merchant_Service__c/fields/Service_Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Service_Product_Name__c</fullName>
    <description>LEM-16029: It is used to store Product Name.</description>
    <formula>Product__r.Name</formula>
    <label>Service Product Name</label>
    <type>Text</type>
</CustomField>