sfdx-source/force-app/main/default/objects/Merchant_Service__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>LEM-187: Initial Setup of Merchant Service</description>
    <label>Start Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>