sfdx-source/force-app/main/default/objects/Merchant_Service__c/fields/Subscription__c.field-meta.xml
<CustomField>
    <fullName>Subscription__c</fullName>
    <description>LEM-187: Initial Setup of Merchant Service</description>
    <label>Subscription</label>
    <referenceTo>SBQQ__Subscription__c</referenceTo>
    <relationshipLabel>Merchant Services</relationshipLabel>
    <relationshipName>Merchant_Services</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>