sfdx-source/force-app/main/default/objects/Merchant_Service__c/fields/Trial_Commission__c.field-meta.xml
<CustomField>
    <fullName>Trial_Commission__c</fullName>
    <description>LEM-1815: Updates to the Page Layouts</description>
    <formula>Order_Product__r.Trial_Commission__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Trial Commission (% )</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>