sfdx-source/force-app/main/default/objects/Merchant_Service__c/fields/Trial_Fee__c.field-meta.xml
<CustomField>
    <fullName>Trial_Fee__c</fullName>
    <description>LEM-5129: Add Tier-Based Pricing to the Service Record</description>
    <formula>Order_Product__r.Trial_Fee__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Trial Fee ($)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>